# uwb-localization-mesh

./: .gitignore  Anchor_bring_up.md  Anchor_bring_up.py  Current_problems.md  DIAGNOSIS_FIGURE8_ISSUES.md  FEAT_DUMMYSERVER_CONTENTS.md  INSTALL.md  PlotData.ipynb  README.md  Server_bring_up.md  Server_bring_up.py  Server_bring_up_with_Audio.py  debug_plan.md  demo_server_bring_up.py  diagnose_data_flow.py  dummies_setup_guide.md  guiding_principles.md  minimal_rpi_test.py  mosquitto.conf  pyproject.toml  requirements.txt  rpi_node_mod (1).py  setup.py  simple_rpi_test.py  task.md  test_mqtt_subscriber.py
Data_collection/: README.md  data_collection_server.py  inspect_raw_data.py
Data_collection/Data/: datapoints(unsure).csv  datapoints(wrong).csv  datapoints.csv  variance(22oct).csv  variance(low_position).csv  variance(wrong).csv  variance.csv
Demos/: DummyServerBringUp.py  DummyServerBringUp_README.md  unified_demo_proposal.md
Demos/Adaptive_audio/: README-pyqt_visualization.md  UserGuide-pyqt_visualization.md  adaptive_audio_controller.py  audio_controller_laptop.py  audio_player.py  gain_controller.py  (+10 more)
audio_files/: .gitkeep
demo_implementation/: LIVE_DEMO_INSTRUCTIONS.md  create_anchor_edges.py  demo.py  ingest_data.py  ingest_data_old.py  overall_plan.md  past_data.py  pgo_3d.py  transform_to_global_vector.py  uwb_pgo.py
randomdocs/: DRIFT_PREVENTION_QUICK_REF.md  EDGE_TRANSFORMATION_ANALYSIS.md  PGO_CONSTRAINT_DIAGRAM.txt  TRANSFORMATION_SUMMARY.md  application.md  server_sequence_diagram.puml  server_sequence_diagram_mermaid.md  system_uml_diagram.puml
(+37 files in other folders)
