[project]
name = "uwb-localization-mesh"
version = "0.1.0"
description = "UWB-based indoor localization using pose graph optimization"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "paho-mqtt>=1.6.0",
    "matplotlib>=3.5.0",
    "pyserial>=3.5",
    "pygame>=2.0.0",    # for adaptive audio demo
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["packages"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.ruff]
line-length = 100
target-version = "py38"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=packages"